Bug 436424 - Embedding a category causes left sidebar to show wrong content until app is restarted
Summary: Embedding a category causes left sidebar to show wrong content until app is r...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
: 428774 431082 432544 447809 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-04-30 21:18 UTC by medin
Modified: 2022-04-19 21:58 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04.1
Sentry Crash Report:


Attachments
Embedding a category causes left sidebar to show wrong content (1.46 MB, video/mp4)
2021-04-30 21:18 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2021-04-30 21:18:19 UTC
Created attachment 138041 [details]
Embedding a category causes left sidebar to show wrong content

When I embed a category then select "Nothing", that category is added at the end in the left sidebar which causes showing wrong content after selecting any category. See attached video for more info.

Operating System: Manjaro Linux
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Kernel Version: 5.4.112-1-MANJARO
OS Type: 64-bit
Graphics Platform: X11
Comment 1 Nate Graham 2021-05-03 19:57:51 UTC
Does it still happen after you chose the app and open it again? Or only after you apply the setting but before restarting the app?
Comment 2 medin 2021-05-03 21:03:20 UTC
(In reply to Nate Graham from comment #1)
> Does it still happen after you chose the app and open it again? Or only
> after you apply the setting but before restarting the app?

After quitting the app, the categories are sorted in their default order and everything work fine.
Comment 3 Nate Graham 2021-05-03 22:38:45 UTC
Argh, can confirm. I thought we had fixed this. :(
Comment 4 Jack Hill 2022-01-03 20:10:45 UTC
*** Bug 447809 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2022-04-18 21:34:04 UTC
*** Bug 428774 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2022-04-19 21:52:26 UTC
*** Bug 431082 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2022-04-19 21:52:31 UTC
*** Bug 432544 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2022-04-19 21:58:48 UTC
Git commit 4ff13b1942380d9f2b86fc59abb58934063ce006 by Nate Graham.
Committed on 19/04/2022 at 21:58.
Pushed by ngraham into branch 'release/22.04'.

Emit change signals for various config changes

We had forgotten to emit change signals for some config settings.
FIXED-IN: 22.04.1

M  +2    -0    src/elisaapplication.cpp

https://invent.kde.org/multimedia/elisa/commit/4ff13b1942380d9f2b86fc59abb58934063ce006