Emit change signals for various config changes

We had forgotten to emit change signals for some config settings.

BUG: 436424
FIXED-IN: 22.04.1